--- a/Brainf_ck-sharp.UWP/UserControls/VirtualKeyboard/StdinHeader/KeyboardHeaderControl.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/VirtualKeyboard/StdinHeader/KeyboardHeaderControl.xaml
@@ -43,15 +43,16 @@
             ToolTipService.ToolTip="Quick memory view"/>
         
         <!--Sliding indicator-->
-        <Canvas x:Name="SelectedRectangle"
-                Height="1"
-                Width="48"
-                HorizontalAlignment="Left"
-                VerticalAlignment="Bottom"
-                Background="{ThemeResource SystemControlHighlightAccentBrush}"
-                Grid.Column="0"
-                Grid.ColumnSpan="2"
-                IsHitTestVisible="False"/>
+        <Canvas 
+            x:Name="SelectedRectangle"
+            Height="1"
+            Width="48"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Bottom"
+            Background="{ThemeResource SystemControlHighlightAccentBrush}"
+            Grid.Column="0"
+            Grid.ColumnSpan="2"
+            IsHitTestVisible="False"/>
         
         <!--Stdin-->
         <TextBox 
