--- a/Brainf_ck-sharp.UWP/UserControls/Header/HeaderControl.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Header/HeaderControl.xaml
@@ -37,14 +37,15 @@
             HeaderSelected="{x:Bind SelectIDE}"/>
         
         <!--Sliding indicator-->
-        <Canvas x:Name="SelectedRectangle"
-                Height="2"
-                Width="80"
-                HorizontalAlignment="Left"
-                VerticalAlignment="Bottom"
-                Background="{ThemeResource SystemControlHighlightAccentBrush}"
-                Grid.Column="0"
-                Grid.ColumnSpan="3"
-                IsHitTestVisible="False"/>
+        <Canvas 
+            x:Name="SelectedRectangle"
+            Height="2"
+            Width="80"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Bottom"
+            Background="{ThemeResource SystemControlHighlightAccentBrush}"
+            Grid.Column="0"
+            Grid.ColumnSpan="3"
+            IsHitTestVisible="False"/>
     </Grid>
 </UserControl>
