--- a/src/Brainf_ckSharp.UWP/App.xaml
+++ b/src/Brainf_ckSharp.UWP/App.xaml
@@ -8,6 +8,7 @@
 
             <!--Resource dictionaries-->
             <ResourceDictionary.MergedDictionaries>
+                <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
                 <ResourceDictionary Source="Resources/Dictionaries/Brushes.xaml"/>
                 <ResourceDictionary Source="Resources/Dictionaries/MDL2Icons.xaml"/>
                 <ResourceDictionary Source="Styles/TemplatedControlsStyles.xaml"/>
