--- a/src/Brainf_ckSharp.UWP/Resources/Dictionaries/MDL2Icons.xaml
+++ b/src/Brainf_ckSharp.UWP/Resources/Dictionaries/MDL2Icons.xaml
@@ -5,5 +5,25 @@
     <!--Shell-->
     <x:String x:Key="ConsoleIcon">&#xF157;</x:String>
     <x:String x:Key="IDEIcon">&#xF158;</x:String>
+
+    <!--Command bar-->
+    <x:String x:Key="RunIcon">&#xE102;</x:String>
+    <x:String x:Key="DebugIcon">&#xEBE8;</x:String>
+    <x:String x:Key="MemoryStateIcon">&#xE74C;</x:String>
+    <x:String x:Key="ClearIcon">&#xE10A;</x:String>
+    <x:String x:Key="DeleteIcon">&#xE750;</x:String>
+    <x:String x:Key="MoveIcon">&#xE759;</x:String>
+    <x:String x:Key="NewLineIcon">&#xE751;</x:String>
+    <x:String x:Key="UndoIcon">&#xE10E;</x:String>
+    <x:String x:Key="RedoIcon">&#xE10D;</x:String>
+    <x:String x:Key="RepeatScriptIcon">&#xE117;</x:String>
+    <x:String x:Key="RestartIcon">&#xE9F3;</x:String>
+    <x:String x:Key="ClearScreen">&#xEA99;</x:String>
+    <x:String x:Key="ShowUnicodeMapIcon">&#xEBDB;</x:String>
+    <x:String x:Key="CodeLibraryIcon">&#xED25;</x:String>
+    <x:String x:Key="SaveIcon">&#xE105;</x:String>
+    <x:String x:Key="SaveAsIcon">&#xEA35;</x:String>
+    <x:String x:Key="SettingsIcon">&#xE115;</x:String>
+    <x:String x:Key="AboutIcon">&#xED15;</x:String>
     
 </ResourceDictionary>
